# txxt

./: .gitignore  BRAINSTORM-2026-02-10.md  DESIGN.md  INTERACTIONS.md  KEYBINDS.md  README.md  analysis-sonnet-arch-review-2026-02-11.md
.opencode/: handover.md  prompt.txt
archive/: HANDOVER.md  README.md  about-gpu-2026-01-26T10-04-47-074Z.txt
archive/backend-rest-era/: api.rs  db.rs  models.rs  ws.rs
archive/frontend-clay-wasm/: main.c
backend/: Cargo.toml  PROFILING.md  build.rs  settings.json
backend/scripts/: profile_smoke.sh  smoke_api.sh
backend/src/: api.rs  auth.rs  db.rs  game.rs  lib.rs  main.rs  models.rs  persist.rs  wire.rs  world.rs  ws.rs
backend/src/authentication/: auth.rs
backend/src/data_access/: data_context.rs
backend/src/shared/: dto.rs  models.rs
backend/src/shared/dto/: create_tao_task_request.rs  login_request.rs  login_response.rs  tao_task_action_response.rs  update_task_request.rs  user_add_request.rs  user_edit_request.rs  user_get_response.rs
backend/src/shared/models/: app_state.rs  settings.rs  tao_task.rs  task_priority.rs  task_status.rs  user.rs
backend/src/web_api/: controllers.rs  routes.rs
backend/src/web_api/controllers/: authentication_controller.rs  health_controller.rs  user_controller.rs
backend/src/web_api/routes/: authentication_routes.rs  health_routes.rs  user_routes.rs
frontend/: build.sh  index.html  ironclad.js  main.c  styles.css
