[package]
name = "txxt-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
redb = "3.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tower = "0.5.3"
rand = "0.9.2"

[profile.release]
lto = true
strip = true
